--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     -->
     <div class="App">
         <div class="App-header">
-          <p class="title"> Blackjack Lite</p>
+          <p class="title"> Blackjack</p>
         </div>
       </div>
-    <title>React App</title>
+    <title>Blackjack Lite</title>
   </head>
   <body>
     <div id="root"></div>
@@ -31,7 +31,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <script src="/src/index.js"></script>
     
   </body>
 </html>
